aggiunto loginController.js e prima modifica documentazione swagger
