# BackEnd/src/routes/userRoutes.js
@@ -7,5 +7,5 @@ const { addSegnalazione } = require('../controllers/user/segnalazioneController'
 // Rotta per ottenere tutti i parchi
 router.get('/init', init);
 //router.get('/infoParco/:id', getInfoParco);
-router.post('/segnala', addSegnalazione);
+router.post('/Segnalazioni', addSegnalazione);
 module.exports = router;
